Fixed responsive design on smaller devices

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ nav {
     color: var(--text-color);
 }
 
+#footer-button {
+    font-size: 20px;
+}
+
 #about-me {
     background-color: var(--second-bg-color);
 }
@@ -78,7 +82,7 @@ body {
     background-color: var(--primary-color);
 }
 
-#carouselExampleIndicators img {
+#about-me-img {
     object-fit: cover;
 }
 
@@ -90,9 +94,7 @@ h5 {
     font-size: 28px;
 }
 
-#about-me-text p {
-    font-size: 21px;
-}
+
 
 /* RESPONSIVE DESIGN */
 
@@ -110,6 +112,28 @@ h5 {
     }
     #kontakt-button {
         width: 40%;
+    }
+    #about-me-text {
+        text-align: center;
+        font-size: 17px;
+    }
+    #about-me-img {
+        width: 80%;
+    }
+    .card-body {
+        p {
+            font-size: 20px;
+        }
+        h5 {
+            font-size: 28px;
+        }
+    }
+    #projects {
+        padding: 10px 50px;
+        
+        button {
+            font-size: 20px;
+        }
     }
 }
 
@@ -136,6 +160,12 @@ h5 {
     #kontakt-button {
         width: 50%;
     }
+    #about-me-text {
+        font-size: 18px;
+    }
+    #projects {
+        padding: 10px 60px;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -152,6 +182,14 @@ h5 {
     }
     #kontakt-button {
         width: 50%;
+    }
+    #about-me-text {
+        text-align: center;
+        font-size: 20px;
+        padding: 1em 1.5em;
+    }
+    #about-me-img {
+        width: 65%;
     }
 }
 
@@ -171,6 +209,17 @@ h5 {
     #kontakt-button {
         width: 40%;
     }
+    #about-me-text {
+        text-align: center;
+        font-size: 18px;
+        padding: 1em 0;
+    }
+    #about-me-img {
+        width: 50%;
+    }
+    #about-me-section {
+        height: 50%;
+    }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
@@ -184,6 +233,12 @@ h5 {
     }
     #kontakt-button {
         width: 40%;
+    }
+    #about-me-section {
+        width: 50%;
+    }
+    #about-me-text {
+        font-size: 20px;
     }
 }
 
